# rust-jwt-simple

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: claims.rs  common.rs  cwt_token.rs  eddsa.rs  error.rs  es256.rs  es256k.rs  hmac.rs  jwe_header.rs  jwe_token.rs  jwt_header.rs  lib.rs  rsa.rs  serde_additions.rs  token.rs
src/algorithms/: eddsa.rs  es256.rs  es256k.rs  es384.rs  hmac.rs  mod.rs  rsa.rs  rsa_legacy.rs
src/algorithms/jwe/: aes_kw.rs  content.rs  ecdh_es.rs  mod.rs  rsa_oaep.rs
wasi-crypto-guest/: Cargo.toml
wasi-crypto-guest/src/: error.rs  lib.rs  main.rs  raw.rs  test.rs
wasi-crypto-guest/src/asymmetric_common/: keypair.rs  mod.rs  publickey.rs
wasi-crypto-guest/src/common/: array_output.rs  mod.rs  options.rs
wasi-crypto-guest/src/signatures/: mod.rs
wasi-crypto-guest/src/signatures/low/: key_pair.rs  mod.rs  public_key.rs  state.rs
wasi-crypto-guest/src/symmetric/: mod.rs
wasi-crypto-guest/src/symmetric/high/: aead.rs  auth.rs  hash.rs  hkdf.rs  mod.rs
wasi-crypto-guest/src/symmetric/low/: mod.rs  state.rs
