[package]
name = "jwt-simple"
version = "0.12.10"
description = "Easy to use, secure, non opinionated JWT (JSON Web Tokens) implementation for Rust."
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
license = "ISC"
repository = "https://github.com/jedisct1/rust-jwt-simple"
homepage = "https://github.com/jedisct1/rust-jwt-simple"
categories = ["wasm", "api-bindings", "web-programming", "cryptography"]
keywords = ["jwt", "jws", "authentication", "tokens", "json"]
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
blake2b_simd = "1.0.2"
binstring = "0.1.1"
ciborium = { version = "0.2.2", optional = true }
coarsetime = "0.1.34"
ct-codecs = "1.1.2"
ed25519-compact = { version = "2.1.1", features = ["pem"] }
hmac-sha1-compact = "1.1.4"
hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
k256 = { version = "0.13.4", features = ["ecdsa", "std", "pkcs8", "pem"] }
p256 = { version = "0.13.2", features = ["ecdsa", "std", "pkcs8", "pem"] }
p384 = { version = "0.13.0", features = ["ecdsa", "std", "pkcs8", "pem"] }
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
zeroize = "1.8.1"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
openssl = { version = "0.10.68", optional = true }
boring = { version = "4.11.0", optional = true }
superboring = { version = "0.1.3", optional = true }

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
superboring = { version = "0.1.3" }

[dev-dependencies]
benchmark-simple = "0.1.10"

[features]
default = ["optimal"]
cwt = ["ciborium"]
openssl = ["dep:openssl"]
optimal = ["boring"]
# Note: to emulate boringssl, "default-features = false" is required in addition to "pure-rust".
pure-rust = ["superboring"]
wasi-abi2 = ["coarsetime/wasi-abi2"]

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"

[profile.bench]
codegen-units = 1
